# haskell-opensrs

./: .gitignore  .travis.yml  README.md  opensrs.cabal
lib/Data/: OpenSRS.hs
lib/Data/OpenSRS/: ToXML.hs  Types.hs
lib/Data/OpenSRS/Types/: Common.hs  Config.hs  Domain.hs  DomainGet.hs  DomainList.hs  XmlPost.hs
lib/Text/HTML/TagSoup/: Manipulators.hs  Pretty.hs
tests/: RequestTests.hs  TestConfig.hs  TestConfig.hs.example  XmlTests.hs
