name:                opensrs
version:             0.1.0.0
synopsis:            OpenSRS API for Haskell
description:         Interact with the OpenSRS wholesale domain registration API.
homepage:            https://github.com/anchor/haskell-opensrs
license:             BSD3
license-file:        LICENSE
author:              Geoffrey Roberts <geoffrey.roberts@anchor.com.au>
maintainer:          Anchor Engineering <engineering@anchor.com.au>
copyright:           © 2013-2014 Anchor Systems, Pty Ltd and Others
category:            Data
build-type:          Simple
cabal-version:       >=1.10
data-files:
        README.md
extra-source-files:
        stack-2.14.yaml
        stack-2.18.yaml
        stack-nightly.yaml
        HLint.hs
        Makefile

source-repository    head
  type:              git
  location:          https://github.com/anchor/haskell-opensrs

library
  exposed-modules:     Data.OpenSRS
  other-modules:       Data.OpenSRS.ToXML
                     , Data.OpenSRS.Types
                     , Data.OpenSRS.Types.Common
                     , Data.OpenSRS.Types.Config
                     , Data.OpenSRS.Types.Domain
                     , Data.OpenSRS.Types.DomainList
                     , Data.OpenSRS.Types.XmlPost
                     , Text.HTML.TagSoup.Pretty
                     , Text.HTML.TagSoup.Manipulators
  build-depends:       base >=4.7
                     , bifunctors
                     , blaze-builder
                     , bytestring
                     , case-insensitive
                     , containers
                     , http-client
                     , http-types
                     , lens
                     , MissingH
                     , old-locale
                     , safe
                     , tagsoup
                     , text
                     , time
                     , tuple
                     , wreq
                     , xmlhtml
  hs-source-dirs:      lib
  default-language:    Haskell2010

test-suite xml-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests, lib
  main-is:             XmlTests.hs
  other-modules:       TestConfig
  default-language:    Haskell2010
  build-depends:       base >=4.7
                     , bifunctors
                     , blaze-builder
                     , bytestring
                     , case-insensitive
                     , containers
                     , hspec
                     , hspec-expectations
                     , http-client
                     , http-types
                     , lens
                     , MissingH
                     , old-locale
                     , safe
                     , tagsoup
                     , text
                     , time
                     , tuple
                     , wreq
                     , xmlhtml

test-suite request-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests, lib
  main-is:             RequestTests.hs
  other-modules:       TestConfig
  default-language:    Haskell2010
  build-depends:       base >=4.7
                     , bifunctors
                     , blaze-builder
                     , bytestring
                     , case-insensitive
                     , containers
                     , hspec
                     , hspec-expectations
                     , http-client
                     , http-types
                     , lens
                     , MissingH
                     , old-locale
                     , safe
                     , tagsoup
                     , text
                     , time
                     , transformers
                     , tuple
                     , uuid
                     , wreq
                     , xmlhtml
